--- a/source/css/components/2_general-style.scss
+++ b/source/css/components/2_general-style.scss
@@ -235,7 +235,7 @@ a {
         height: 100%;
     }
     & .overscroll {
-      overflow-y: scroll;
+      overflow-y: auto;
       max-height: 100%;
     }
 
