edit url bg sidebar head

--- a/source/css/components/2_general-style.scss
+++ b/source/css/components/2_general-style.scss
@@ -72,7 +72,7 @@ a {
 
     &__head {
         height: 160px;
-        background: url('/image/bg.jpg');
+        background: url('../image/bg.jpg');
         padding: 27px 17px 19px 17px;
         color: $white-two;
     }
